css/menu.css
/* Extra small devices (portrait phones, less than 576px) */
/* No media query since this is the default in Bootstrap */

/*** HEADER ***/
body {
  padding-top: 5em;
}
.fixed-top {
  overflow-y: auto;
}
.navbar {
  padding: 0 0 1em 0;
}
.navbar .container-fluid {
  justify-content: center;
}
#cta {
  position: relative;
  height: 3em;
  background-color: #0c204f;
}
#cta .row {
  margin-top: .5em;
  margin-bottom: .5em;
  align-items: center;
  justify-content: center;
  font-size: .85em;
  background-color: #0c204f;
  color: white;
}
#cta p {
  margin-bottom: 0;
  text-align: center;
  font-weight: 300;
}
.phone a{
  font-weight: 800;
  color: #ffcc00;
}
#brand-wrap {
  width: 100%;
  text-align: center;
}
.dropdown .dropdown-menu {
  max-height: 30vh;
  overflow-y: auto;
  overflow-x: hidden;
}
#navbarMenu {
  padding-top: 1em;
}
.rectangle, .triangle {
  display: none;
}

/* drop down mobile */
.dropdown {
  line-height: 1.5;
}
.dropdown button {
  background-color: #fff;
  border: none;
  width: 100%;
  border-radius: initial;
  font-weight: 700;
  color: #0c204f;
}
.dropdown button:focus {
  box-shadow: none;
  color: #f99f2a;
}
.navbar-toggler:hover, .navbar-toggler:focus {
  background: none;
}
.dropdown .dropdown-menu {
  background-color: #e7e7e7;
  font-size: .85em;
  border-radius: 0;
  text-align: center;
}
.dropdown .dropdown-menu a {
  color: #0c204f;
}
.dropdown .dropdown-menu .dropdown-item:hover,
.dropdown .dropdown-menu .dropdown-item:focus {
  background-color: transparent;
}
.dropdown .dropdown-menu .dropdown-item:active {
  background-color:  #1c2d59;
  color: white;
}
.dropdown-toggle::after {
  display: none;
}
/* Rows and Columns */
.dropdown-row .dropdown-item {
  display:inline-block;
  width: 100%;
  font-weight: 700;
}

/*** FOOTER ***/
#ft-divider {
  border-top: 2px solid #163683;
}

#ft-links, #ft-links a,
#ft-addy, #ft-addy a, #ft-copyright {
  line-height: .5;
  color: white;
}

#ft-links {
  font-weight: 600;
}

#ft-links a:focus, #ft-links a:active {
  text-decoration: none;
  color: #f99f2a;
}

#ft-links, #ft-addy {
  font-size: .85em;
}

#ft-copyright {
  padding-right: 0;
  font-size: .65em;
}

/* Small devices (landscape phones, 576px and up) */
@media (min-width: 576px) {
  #break {
    display: none;
  }
  #cta .row {
    font-size: initial;
  }
}


 /* Medium devices (tablets, 768px and up) */
@media (min-width: 768px) {
  body {
    padding-top: 7em;
  }
  #cta {
    margin-bottom: 1em;
  }
  #cta p {
    font-size: 0.9rem;
  }
  #ft-links a:hover {
    text-decoration: none;
    color: #f99f2a;
  }
}


 /* Large devices (desktops, 992px and up) */
@media (min-width: 992px) {
  .navbar-expand-lg {
    flex-flow: row wrap;
  }
  .navbar {
    padding: 0;
  }
  #brand-wrap {
    width: auto;
  }
  .fixed-top {
    overflow-y: initial;
  }
  #brand-wrap .navbar-brand {
    margin-right: 4rem;
    margin-left: 1rem;
    padding-top: 0;
    padding-bottom: 0;
  }
  /* change the link color */
  .navbar-light .navbar-nav .nav-link {
    color: white;
    font-weight: 700;
  }
  /* change the color of active or hovered links */
  .navbar-light .nav-item.active .nav-link,
  .navbar-light .nav-item:focus .nav-link,
  .navbar-light .nav-item:hover .nav-link {
    color: #f99f2a;
  }
  /* change the color of visited links */
  .navbar-light a:visited {
    color: #0c204f;
  }
  .navbar-brand img {
    width: 100%;
    height: auto;
  }
  #navbarMenu {
    margin-top: 1em;
    padding-top: 0;
  }
  .dropdown .rectangle {
    display: block;
    height: 36px;
    width: 100%;
    background-color: #fff;
  }
  .dropdown:hover .triangle {
    display: block;
    width: 0;
    height: 0;
    border-left: 14px solid transparent;
    border-right: 14px solid transparent;
    border-bottom: 18px solid #1c2d59;
    z-index: 1;
    margin-top: -18px;
    margin-left: 37%;
  }
  .dropdown {
    margin-right: .75em;
    color: white;
  }
  .dropdown button {
    background-color: #233f7c;
    font-size: .75rem;
    font-weight: 700;
    padding: .65rem 1.05rem;
    line-height: 1.35;
    color:white;
  }
  .dropdown button:hover {
    color: #f99f2a;
    background-color: #233f7c;
    border: none;
  }
  .dropdown .dropdown-menu {
    background-color: #1c2d59;
    border: none;
    font-size: .85em;
    max-height: 50vh;
    overflow: inherit;
    padding: .5rem 0 1rem 0;
    text-align: left;
  }
  .dropdown:hover .dropdown-menu {
    display: block;
  }
  .dropdown:hover .dropdown-menu a:hover {
    color: #f99f2a;
    background-color: #1c2d59;
  }
  .dropdown .dropdown-menu a {
    color: white;
  }
  .dropdown-row .dropdown-item {
    color: #f99f2a;
  }
  .dropdown-toggle::after {
    display: none;
  }
  /* Rows and Columns */
  .dropdown .single-col {
    left: calc(100% - 190px);
    top: 6em;
  }
  .dropdown .sm-col {
    top: 6em;
    left: calc(100% - 155px);
  }
  .dropdown-twocol {
    min-width: 34em;
    left: -12.5em;
    top: 6em;
  }
  .dropdown-multicol {
    min-width: 50em;
    left: -19.45em;
    top: 6em;
  }
  #multicol-row {
    width: 100%;
    margin: 0;
    margin-left: 4em;
  }
  #multicol-row > div:nth-child(1) {
    margin-right: 4em;
  }
  #multicol-row .dropdown-item {
    padding-left: 0;
    padding-right: 0;
  }
  #twocol-row {
    margin-right: 8em;
    margin-left: 3em;
  }
  #twocol-row .dropdown-col {
    padding-left: 0;
    padding-right: 0;
  }
  .dropdown-row .dropdown-item {
    display:inline-block;
    width: 100%;
  }
}


 /* Extra large devices (large desktops, 1200px and up) */
@media (min-width: 1200px) {
  body {
    padding-top: 8em;
  }
  #brand-wrap .navbar-brand {
    margin-right: 5rem;
  }
}

